--- a/index.html
+++ b/index.html
@@ -5,39 +5,164 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FlexBlog</title>
+  <title>justBLOG</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-   
-<!-- Background primeiro, para depois envolver a DIV do menu -->
-  <div class="superinfo-bg"> 
+
+  <!-- Background primeiro, para depois envolver a DIV do menu -->
+  <div class="superinfo-bg">
     <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00 </p>
       <a href="https://api.whatsapp.com/send?phone=55129181818181&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!">(12)9818181818</a>
       <p>Av. Logo Ali, 42, São José dos Campo</p>
     </div>
-
-    <header class="menu-bg">
-      <div class="menu">
-        <div class="menu-logo">
-          <a href="#">justBLOG</a>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="produtos">Produtos</a></li>
-            <li><a href="preco">Preço</a></li>
-            <li><a href="qualidade">Qualidade</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
   </div>
+  <header class="menu-bg">
+    <div class="menu">
+      <div class="menu-logo">
+        <a href="#">justBLOG</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="produtos">Produtos</a></li>
+          <li><a href="preco">Preço</a></li>
+          <li><a href="qualidade">Qualidade</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <h1>Novos valores e <br>Propriedades do CSS</h1>
+
+  <section class="sobre" id="sobre">
+    <div class="sobre-info">
+      <h1>Sobre</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima dolorem dolor rem itaque nobis. Ipsam, voluptas, pariatur commodi autem sunt in eum reprehenderit ex, voluptates nobis natus eveniet hic soluta.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus labore ducimus quasi suscipit quaerat reiciendis beatae quam magni rerum minima vel error earum et sed ullam harum non, neque omnis.</p>
+    </div>
+
+    <div class="sobre-img">
+      <img src="./img/sobre1.jpg" alt="Sobre 1">
+    </div>
+
+    <div class="sobre-img">
+      <img src="./img/sobre2.jpg" alt="Sobre 2">
+    </div>
+
+  </section>
+
+  <section class="produtos" id="produtos">
+    <h1>Produtos</h1>
+    <div class="produtos-container">
+      <div class="produtos-item purple">
+        <h2>Purple</h2>
+        <img src="img/produtos1.jpg" alt="Produtos 1">
+      </div>
+      
+      <div class="produtos-item pink">
+        <h2>Pink</h2>
+        <img src="img/produtos2.jpg" alt="Produtos 2">
+      </div>
+
+      <div class="produtos-item blue">
+        <h2>Blue</h2>
+        <img src="/img/produtos3.jpg" alt="Produtos 3">
+      </div>
+    </div>
+  </section>
+
+  <section class="preco" id="preco">
+    <div class="preco-item">
+      <h2>Cobre</h2>
+      <span><sup>R$</sup>19</span>
+      <ul>
+        <li>Planos Ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+
+    <div class="preco-item">
+      <h2>Prata</h2>
+      <span><sup>R$</sup>39</span>
+      <ul>
+        <li>Planos Ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+        <li>Cobra Exclusiva</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+
+    <div class="preco-item">
+      <h2>Ouro</h2>
+      <span><sup>R$</sup>79</span>
+      <ul>
+        <li>Planos Ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+        <li>Cobra Exclusiva</li>
+        <li>Download dos Itens</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+  </section>
+
+  <section class="qualidade" id="qualidade">
+    <div class="qualidade-item">
+      <h2>Inteligente</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+    </div>
+
+    <div class="qualidade-item">
+      <h2>Compacto</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente</p>
+    </div>
+
+    <div class="qualidade-item">
+      <h2>Econômico</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+    </div>
+
+    <div class="qualidade-item">
+      <h2>Transparente</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+    </div>
+
+    <div class="qualidade-item">
+      <h2>Opaco</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições inegavelmente.</p>
+    </div>
+
+    <div class="qualidade-item">
+      <h2>Sustentável</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
+    </div>
+  </section>
+
+  <section class="newsletter"> 
+    <div class="newsletter-info">
+      <h1>Newsletter</h1>
+      <p>Assine e fique por dentro das novidades!</p>
+    </div>
+    <form class="newsletter-form">
+      <input type="text" placeholder="Seu e-mail">
+      <button type="submit">Assinar</button>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <p>justBLOG <br>Made with Love <img src="/img/heart.svg" alt="Coraçãozinho" height="12px"></p>
+  </footer>
 
 </body>
 
