--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00 </p>
       <a href="https://api.whatsapp.com/send?phone=55129181818181&text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais!">(12)9818181818</a>
-      <p>Av. Logo Ali, 42, São José dos Campo</p>
+      <p>Av. Logo Ali, 42, São José dos Campos - SP</p>
     </div>
   </div>
   <header class="menu-bg">
