--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>justBLOG</title>
+  <title>JustBlog</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -24,14 +26,14 @@
   <header class="menu-bg">
     <div class="menu">
       <div class="menu-logo">
-        <a href="#">justBLOG</a>
+        <a href="#">JustBlog</a>
       </div>
-      <nav>
+      <nav class="menu-nav">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="produtos">Produtos</a></li>
-          <li><a href="preco">Preço</a></li>
-          <li><a href="qualidade">Qualidade</a></li>
+          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#preco">Preço</a></li>
+          <li><a href="#qualidade">Qualidade</a></li>
         </ul>
       </nav>
     </div>
@@ -63,7 +65,7 @@
         <h2>Purple</h2>
         <img src="img/produtos1.jpg" alt="Produtos 1">
       </div>
-      
+
       <div class="produtos-item pink">
         <h2>Pink</h2>
         <img src="img/produtos2.jpg" alt="Produtos 2">
@@ -149,7 +151,7 @@
     </div>
   </section>
 
-  <section class="newsletter"> 
+  <section class="newsletter">
     <div class="newsletter-info">
       <h1>Newsletter</h1>
       <p>Assine e fique por dentro das novidades!</p>
