--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
     <p>justBLOG <br>Made with Love <img src="/img/heart.svg" alt="Coraçãozinho" height="12px"></p>
   </footer>
 
+  <script src="./scripts.js">
+  </script>
+
 </body>
 
 </html>
