--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </div>
 
     <div class="preco-item">
-      <h2>Prata</h2>
+      <h2>Prata </h2>
       <span><sup>R$</sup>39</span>
       <ul>
         <li>Planos Ilimitados</li>
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
         <li>Suporte 24h</li>
-        <li>Cobra Exclusiva</li>
+        <li>Compra Exclusiva</li>
       </ul>
       <a href="#">Comprar</a>
     </div>
@@ -112,7 +112,7 @@
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
         <li>Suporte 24h</li>
-        <li>Cobra Exclusiva</li>
+        <li>Compra Exclusiva</li>
         <li>Download dos Itens</li>
       </ul>
       <a href="#">Comprar</a>
