--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
   </section>
 
   <footer class="footer">
-    <p>justBLOG <br>Made with Love <img src="/img/heart.svg" alt="Coraçãozinho" height="12px"></p>
+    <p>Just Blog <br>Made with Love</p>
   </footer>
 
   <script src="./scripts.js">
+
   </script>
 
 </body>
